<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E3F4FD"
    tools:context=".SelectCropActivity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="*"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:text="@string/Cabbage"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/btn_cabbage"
                android:textColor="#00685B"
                android:textSize="20sp"
                android:onClick="rec_cabbage"/>
            <Button
                android:text="@string/Onion"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/btn_onion"
                android:textColor="#00685B"
                android:textSize="20sp"
                android:onClick="rec_onion"
                />
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:text="@string/Tomato"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/btn_tomato"
                android:textColor="#00685B"
                android:textSize="20sp"
                android:onClick="rec_tomato"/>
            <Button
                android:text="@string/Chilli"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/btn_chilli"
                android:textColor="#00685B"
                android:textSize="20sp"
                android:onClick="rec_chilli"/>
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:text="@string/Grapes"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/btn_grapes"
                android:textColor="#00685B"
                android:textSize="20sp"/>
            <Button
                android:text="@string/Other_Crops"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/btn_other"
                android:textColor="#00685B"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
