<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_horizontal_margin">
        <EditText
            android:id="@+id/Edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/person"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/hint_Name"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/shape"
            android:inputType="text"
            android:singleLine="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/Edit_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/home"
            android:padding="@dimen/activity_horizontal_margin"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/hint_State"
            android:background="@drawable/shape"
            android:inputType="text"
            android:singleLine="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/Edit_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/add"
            android:padding="@dimen/activity_horizontal_margin"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/hint_District"
            android:background="@drawable/shape"
            android:inputType="text"
            android:singleLine="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/Edit_tehsil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/add"
            android:padding="@dimen/activity_horizontal_margin"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/hint_Tehsil"
            android:background="@drawable/shape"
            android:inputType="text"
            android:singleLine="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/Edit_village"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/add"
            android:padding="@dimen/activity_horizontal_margin"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/hint_Village"
            android:background="@drawable/shape"
            android:inputType="text"
            android:singleLine="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/Edit_pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/add"
            android:padding="@dimen/activity_horizontal_margin"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/hint_Pincode"
            android:background="@drawable/shape"
            android:inputType="number"
            android:singleLine="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/Edit_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/phone"
            android:background="@drawable/shape"
            android:padding="@dimen/activity_horizontal_margin"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/hint_Mobile"
            android:inputType="number"
            android:singleLine="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <Button
            android:id="@+id/Update_Profile_Data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/Update_Profile_btn"
            android:textSize="20sp"
            android:background="#00b7d3"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:paddingLeft="30sp"
            android:paddingRight="30sp"
            android:layout_span="3"/>

    </LinearLayout>
</ScrollView>