<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginActivity_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#E3F4FD"
    tools:context=".LoginActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_weight="0.15">
        <EditText
            android:id="@+id/ETmobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:maxLength="10"
            android:lines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:hint="@string/Mobile_Number"
            android:textColorHint="#00796B"/>

        <EditText
            android:id="@+id/ETpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:hint="@string/Password"
            android:maxLength="8"
            android:textColorHint="#00796B"/>

        <!-- Login Button -->
        <Button
            android:id="@+id/btnlogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#C2E7F3"
            android:text="@string/Login"
            android:textColor="#00796B"
            android:onClick="OnButtonClick"/>

        <!-- Link to Registration Screen -->
        <Button
            android:id="@+id/btnregister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:textColor="#00796B"
            android:text="@string/GotoSignUp"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:onClick="OnButtonClick"
            />
    </LinearLayout>

</LinearLayout>
