<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E3F4FD"
    tools:context=".RecommendationActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Use_FurtilizerRecommendation"
                android:textSize="25sp"
                android:textIsSelectable="false"
                android:textColor="#00796B"
                android:id="@+id/detailrecommendation" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Recommendation_for_N"
                android:id="@+id/txt_n"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="#00796B"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:focusable="false"
                android:id="@+id/result_nvalue"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Kg"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="#00796B"
                android:id="@+id/unit1"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Recommendation_for_P"
                android:id="@+id/txt_p"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="#00796B"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:focusable="false"
                android:id="@+id/result_pvalue"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Kg"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="#00796B"
                android:id="@+id/unit2"
                />
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Recommendation_for_K"
                android:id="@+id/txt_k"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="#00796B"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:focusable="false"
                android:id="@+id/result_kvalue"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Kg"
                android:textSize="20sp"
                android:textIsSelectable="false"
                android:textColor="#00796B"
                android:id="@+id/unit3"
                />
        </TableRow>
        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/New_SoilTest"
                android:id="@+id/btn_newtesting"
                android:background="#00b7d3"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:paddingLeft="30sp"
                android:paddingRight="30sp"
                android:layout_span="3"
                android:onClick="Open_Login_Register"
                />
        </TableRow>
    </TableLayout>
    </RelativeLayout>