<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E3F4FD"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="disq.farmss.AddPlotSizeActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:layout_weight="0.15">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/How_much_area_for_soil_testing"
            android:textIsSelectable="false"
            android:textColor="#00685B"
            android:textSize="22sp"
            android:textAlignment="center"/>
        <RadioGroup
            android:id="@+id/plotType"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <RadioButton
                android:id="@+id/RadioButtonGuntha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Guntha"
                android:checked="true"
                android:padding="10dp"
                android:textColor="#00685B"
                android:textSize="22sp"
                />
            <RadioButton
                android:id="@+id/RadioButtonAcre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Acre"
                android:padding="10dp"
                android:textColor="#00685B"
                android:textSize="22sp"
                />
        </RadioGroup>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00685B"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:id="@+id/PlotSizeValue"
            android:layout_gravity="center_horizontal"
            android:allowUndo="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addPlotSize"
            android:text="@string/Find_Device"
            android:background="#00b7d3"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginTop="35sp"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:layout_gravity="center_horizontal"
            android:onClick="FindDevice"
            />
    </LinearLayout>
</LinearLayout>








