<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E3F4FD"
    tools:context=".RegSuccessfulActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_deviceFound"
        android:text="@string/AddPlotSize"
        android:background="#00b7d3"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:onClick="open_findMachine"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Successfully_Registered"
        android:textSize="18sp"
        android:textIsSelectable="false"
        android:textColor="#0176BC"
        android:id="@+id/txtCongo"
        android:layout_above="@+id/btn_deviceFound"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="171dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Welcome_To"
        android:textSize="18sp"
        android:textIsSelectable="false"
        android:textColor="#0176BC"
        android:id="@+id/welcometxt"
        android:layout_above="@+id/txtCongo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/welcome_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp" />
</RelativeLayout>
